--- a/projects/ae-doc/src/lib/nav/nav.component.html
+++ b/projects/ae-doc/src/lib/nav/nav.component.html
@@ -3,7 +3,7 @@
     [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item *ngFor="let menuItem of input.menu" (click)="setComponent(menuItem)">{{menuItem.name}}</a>
+      <a mat-list-item *ngFor="let menuItem of input.nav" (click)="setComponent(menuItem)">{{menuItem.name}}</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -12,8 +12,16 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>{{input.name}}</span>
+
     </mat-toolbar>
-    <ae-component-view [input]="component" *ngIf="component"></ae-component-view>
+    <div class="document-content" *ngIf="component">
+
+      <mat-tab-group>
+        <mat-tab label='OVERVIEW'>
+          <ae-component-view [input]="component"></ae-component-view>
+        </mat-tab>
+      </mat-tab-group>
+
+    </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
